# libcamera-apps

./: .gitignore  eye.bash  meson.build
apps/: CMakeLists.txt  meson.build
core/: video_options.hpp
eyecam_net/: Cargo.toml  README.md  release.sh
eyecam_net/src/: lib.rs  peer.rs  servos.rs  signal.rs
libs/: eyecam_net.h
output/: meson.build  output.cpp  webrtc_output.cpp  webrtc_output.hpp
