[package]
name = "eyecam-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
byteorder = "1.5.0"
bytes = "1.5.0"
hyper = { version = "0.14.27", features = ["h2", "client", "http2", "http1", "runtime"] }
hyper-rustls = { version = "0.24.2", features = ["http2"] }
rppal = "0.15.0"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
webrtc = "0.9.0"
